--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -35,7 +35,7 @@ De onderzoeksvragen die gevormd worden bij de vergelijking tussen gRPC met Proto
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}
 \label{sec:onderzoeksdoelstelling}
 
-Wat is het beoogde resultaat van je bachelorproef? Wat zijn de criteria voor succes? Beschrijf die zo concreet mogelijk. Gaat het bv. om een proof-of-concept, een prototype, een verslag met aanbevelingen, een vergelijkende studie, enz.
+Aan de hand van een proof-of-concept wordt verwacht dat gRPC performanter zal zijn voor de Discovery API van The Fashion Society. Om deze doelstelling te behalen moet aan de onderzoeksvraag “Is gRPC met ProtocolBuffers sneller dan REST API met JSON voor de implementatie van The Fashion Society?” voldaan worden.
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}
 \label{sec:opzet-bachelorproef}
