--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -24,10 +24,18 @@ In deze analyse worden de functionele en niet-functionele vereisten opgelijst wa
 
 Functionele requirements:
 \begin{itemize}
-    \item .NET Core 3.1 voor long-term support.
+    \item Implementatie aan de hand van .NET Core 3.1 voor long-term support.
+    \item Moet een grote hoeveelheid aan parallelle requests kunnen afhandelen.
+
 \end{itemize}
 
 Niet-functionele requirements:
+\begin{itemize}
+    \item Moet (relatief) gemakkelijk uitbreidbaar zijn.
+ \item Moet snel requests kunnen afhandelen.
+     \item Moet schaalbaar zijn.
+\end{itemize}
+
 
 
 \section{Plan van aanpak}
