--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -36,8 +36,8 @@
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
-Op basis van dit onderzoek kan de Fashion Society kiezen om de huidige structuur van de Discovery API, zijnde REST met JSON, te behouden of over te schakelen naar gRPC met Protocol Buffers. Dit onderzoek is interessant doordat de Fashion Society als maar blijft uitbreiden en er dagelijks honderdduizenden requests passeren door zowel de Orchestrator als de Discovery API en opmerkelijke verbeteringen in performantie door de eindgebruiker, zijnde het personeel van de Fashion Society en onderliggende bedrijven, duidelijk gevoeld kunnen worden. In dit onderzoek worden REST met JSON en gRPC met Protocol Buffers onderzocht en met elkaar vergeleken. Voor het uitvoeren van dit onderzoek wordt gebruik gemaakt van de testserver van de Fashion Society waar de huidige structuur reeds op geïmplementeerd is. De twee structuren worden vergeleken op basis van performantie in twee groeperingen, de kleine payload bestaande uit vierduizend requests en de grote payload bestaande uit veertigduizend requests. Verder in dit document zult u een inleiding tot het onderwerp vinden waarin onder andere de huidige stand van zaken, de onderzoeksvraag en het verdere verloop van deze bachelorproef beschreven staan. Alsook vindt u voor elk van beide structuren de resultaten van beide payloads.
+Op basis van dit onderzoek kan de Fashion Society kiezen om de huidige structuur van de Discovery API, zijnde REST met JSON, te behouden of over te schakelen naar gRPC met Protocol Buffers. Dit onderzoek is interessant doordat de Fashion Society als maar blijft uitbreiden en er dagelijks duizenden requests passeren door zowel de Orchestrator als de Discovery API en opmerkelijke verbeteringen in performantie door de eindgebruiker, zijnde het personeel van de Fashion Society en onderliggende bedrijven, duidelijk gevoeld kunnen worden. In dit onderzoek worden REST met JSON en gRPC met Protocol Buffers onderzocht en met elkaar vergeleken. Voor het uitvoeren van dit onderzoek wordt gebruik gemaakt van de testserver van de Fashion Society waar de huidige structuur reeds op geïmplementeerd is. De twee structuren worden vergeleken op basis van performantie in twee groeperingen, de kleine payload bestaande uit vierduizend requests en de grote payload bestaande uit tienduizend requests. Verder in dit document zult u een inleiding tot het onderwerp vinden waarin onder andere de huidige stand van zaken, de onderzoeksvraag en het verdere verloop van deze bachelorproef beschreven staan. Alsook vindt u voor elk van beide structuren de resultaten van beide payloads.
 
-In dit onderzoek wordt duidelijk dat gRPC met Protocolbuffers duidelijk een performantere implementatie heeft dan REST met JSON voor de Fashion Society. Wel is gebleken dat het niet de aan de verwachtte snelheidsverbetering komt maar dat verschil in snelheid van gRPC ten opzichte van REST relatief beperkt blijft. Doordat gRPC alsnog een performanter alternatief is voor REST is het naar de toekomst toe aan te raden aan de Fashion Society om de communicatie tussen de Orchestrator API en Discovery API om te zetten naar gRPC met ProtocolBuffers.
- Dit onderzoek heeft zich enkel gericht op de communicatie tussen de Orchestrator API en Discovery API van de Fashion Society, toekomstig onderzoek kan gedaan worden naar de performantie in communicatie tussen de interne services en de Discovery API voor de huidige REST implementatie en een gRPC implementatie of toekomstig onderzoek kan ook gedaan worden naar de winst in performantie bij het omschakelen naar een volledige gRPC structuur waarbij REST en JSON nog amper tot niet meer gebruikt worden. Echter zal dit laatste onderzoek in praktijk moeilijk te behalen zijn door de omvang van het huidige aantal REST services binnen de Fashion Society.
+In dit onderzoek is duidelijk geworden dat gRPC met Protocolbuffers duidelijk een performantere implementatie heeft dan REST met JSON voor de Fashion Society. Wel is gebleken dat het niet aan de verwachtte snelheidsverbetering komt maar dat het verschil in snelheid van gRPC ten opzichte van REST relatief beperkt blijft. Doordat gRPC alsnog een performanter alternatief is voor REST is het naar de toekomst toe aan te raden aan de Fashion Society om de communicatie tussen de Orchestrator API en Discovery API om te zetten naar gRPC met ProtocolBuffers.
+ Dit onderzoek heeft zich enkel gericht op de communicatie tussen de Orchestrator API en Discovery API van de Fashion Society. Toekomstig onderzoek kan gedaan worden naar de performantie in communicatie tussen de interne services en de Discovery API voor de huidige REST implementatie en een gRPC implementatie alsook kan toekomstig onderzoek gedaan worden naar de winst in performantie bij het omschakelen naar een volledige gRPC structuur waarbij REST en JSON nog amper tot niet meer gebruikt worden. Echter zal dit laatste onderzoek in praktijk moeilijk te behalen zijn door de omvang van het huidige aantal REST services binnen de Fashion Society.
 %TODO Aanvullen met resultaat van onderzoek.
