--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -202,7 +202,7 @@ Bij REST kan elk stuk informatie een resource zijn, dit kan van alles zijn zoals
 \subsection{Hoe werkt een RESTful API?}
 \label{subsec:Hoe werkt een RESTful API?}
 
-Zoals eerder vermeld in subsectie \ref{subsec:Design principes} heeft elke resource een unieke URL, zo een URL wordt een request genoemd waarbij de gereturnde data gekend staat als een response. In een RESTful API worden deze requests of transacties in vier componenten verdeeld zoals uitgelegd in \textcite{Karine2020}.
+Zoals eerder vermeld in subsectie \ref{subsec:Design principes} heeft elke resource een unieke URL, zo een URL wordt een request genoemd waarbij de gereturnde data gekend staat als een response. In een RESTful API worden deze requests of transacties in vier componenten verdeeld zoals uitgelegd in REST API (cursus van Karine Samyn, 29 maart 2020, opleidingsonderdeel WebApplicaties IV).
 
 \begin{itemize}
     \item \textbf{GET}: Deze request haalt een representatie van een resource op.
